--- a/src/components/layout/Header/Header.module.css
+++ b/src/components/layout/Header/Header.module.css
@@ -158,6 +158,7 @@ nav {
         border-top: 3px solid var(--primary-500);
         box-shadow: 0 3px 6px hsla(0, 0%, 0%, .1);
         padding: 10px 0 0 0;
+        background-color: white;
     }
 
     .osteoSubnav {
